--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
-APP_NAME=Laravel
+APP_NAME=Labconnector
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:GG+2doD7MfU2hP4+meIofN/9PSOVr8c49Zkysxirsak=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://labconnector
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=labconnector
+DB_USERNAME=
+DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
@@ -30,10 +30,10 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID=625279
+PUSHER_APP_KEY=d3e0a396f3ffdda709c3
+PUSHER_APP_SECRET=a3d29f7ca72924303302
+PUSHER_APP_CLUSTER=eu
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
